# negotiation_crawler

./: .gitignore  README.md  config.yaml  config.yaml.example  pyproject.toml
docs/: iotc_tutorial.md  wto_docs_tutorial.md
negotiation_crawler/: api.py  base.py  cli.py  config.py  dedup.py
negotiation_crawler/crawlers/: __init__.py  _iotc_runner.py  fishery_book.py  iotc.py  wto_docs.py  wto_site.py
negotiation_crawler/crawlers/fishery_book/: __init__.py  config.py  models.py  pipeline.py  seeds.json
negotiation_crawler/crawlers/fishery_book/classifier/: __init__.py  matcher.py
negotiation_crawler/crawlers/fishery_book/fetch/: __init__.py  dspace.py  legacy.py
negotiation_crawler/crawlers/fishery_book/process/: __init__.py  audit_xlsx.py  pdf_meta.py
negotiation_crawler/crawlers/fishery_book/storage/: db.py  files.py
negotiation_crawler/crawlers/iotc/: __init__.py  config.py
negotiation_crawler/crawlers/iotc/classifier/: classifier.py
negotiation_crawler/crawlers/iotc/fetch/: crawler.py
negotiation_crawler/crawlers/iotc/process/: xlsx_builder.py
negotiation_crawler/crawlers/iotc/storage/: db.py
negotiation_crawler/crawlers/wto_docs/: __init__.py
negotiation_crawler/crawlers/wto_docs/fetch/: detail.py  download.py  enumerate.py  fetch.py
negotiation_crawler/crawlers/wto_docs/process/: __init__.py
negotiation_crawler/crawlers/wto_site/: __init__.py  config.py
negotiation_crawler/crawlers/wto_site/classifier/: __init__.py
negotiation_crawler/crawlers/wto_site/fetch/: __init__.py  urlrules.py
negotiation_crawler/crawlers/wto_site/process/: __init__.py  extract.py  pipeline.py
negotiation_crawler/crawlers/wto_site/storage/: db.py
negotiation_crawler/export/: __init__.py  unified_db.py
tests/crawlers/wto_site/: test_urlrules.py
