[project]
name = "negotiation-crawler"
version = "0.1.0"
description = "Unified crawler hub for fishery negotiation materials"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Install the crawlers you actually use
fishery-book = [
    "httpx[http2]>=0.27",
    "openpyxl>=3.1",
    "pypdf>=4.2",
    "loguru>=0.7",
    "rapidfuzz>=3.9",
    "selectolax>=0.3",
]
iotc = [
    "httpx>=0.27",
    "selectolax>=0.3",
    "openpyxl>=3.1",
]
wto-site = [
    "httpx>=0.27",
    "selectolax>=0.3",
    "trafilatura>=1.12",
]
wto-docs = [
    "playwright>=1.44",   # run: playwright install chromium
    "httpx>=0.27",
]
all = [
    "negotiation-crawler[fishery-book,iotc,wto-site,wto-docs]",
]

[project.scripts]
negotiation-crawler = "negotiation_crawler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["negotiation_crawler"]
