[project]
name = "negotiation-crawler"
version = "0.1.0"
description = "Unified crawler hub for fishery negotiation materials"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pyyaml>=6.0",
    # fishery_book
    "httpx[http2,socks]>=0.27",
    "loguru>=0.7",
    "rapidfuzz>=3.9",
    "openpyxl>=3.1",
    # iotc
    "selectolax>=0.3",
    # wto_site
    "beautifulsoup4>=4.12",
    "markdownify>=0.13",
]

[project.optional-dependencies]
pdf = [
    "pypdf>=4.2",          # fishery_book: page count from PDF
]
wto-docs-harvest = [
    "playwright>=1.44",    # wto_docs phase 1: browser-driven search
]
all = [
    "negotiation-crawler[pdf,wto-docs-harvest]",
]

[project.scripts]
negotiation-crawler = "negotiation_crawler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["negotiation_crawler"]
